Add content on OL and UL

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- These are examples of diff headings -->
     <h1>Hello World!</h1>
     <h2>Hello World!</h2>
     <h3>Hello World!</h3>
@@ -14,10 +15,29 @@
     <h5>Hello World!</h5>
     <h6>Hello World!</h6>
 
+    <!-- These are examples of paragraph -->
     <p>Hello World I am Li-Chang</p>
+    <!-- This is an example of bolding in html -->
     <p><strong>Hello World I am Li-Chang</strong></p>
+    <!-- This is an example of italicising in html -->
     <p><em>Hello World I am Li-Chang</em></p>
-    <!-- This is a comment woohooo -->
+    
+    <!-- These are examples of list -->
+    <!-- Unordered list -->
+    <h2>List of my favourite foods</h2>
+    <ul>
+        <li>Chicken Rice</li>
+        <li>Kiwis</li>
+        <li>Pizza</li>
+    </ul>
+
+    <!-- Ordered List -->
+    <h2>List of my TODOs</h2>
+    <ol>
+        <li>Learn about HTML</li>
+        <li>Get back to my boss</li>
+        <li>Eat Pizza</li>
+    </ol>
 </body>
 </html>
 
